test/loopForgetRedefine2.slq

def main(){
	x:=H(0:ğ”¹);
	y:=dup(x);
	while measure(H(0)){
		forget(y); /// error (could type check in principle)
		x:=H(x);
		y:=dup(x); /// error
	}
	return x;
}


